feat(认证模块):完善认证模块